Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stp-lab-service
#  namespace: development
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  selector:
    app: lab-app
