Kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stp-lab-ingress
#  namespace: development
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: lab-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: stp-lab-service
              servicePort: 80
